# engramme-assist

./: .gitignore  LICENSE  MANIFEST.in  README.md  channels.example.yml  pyproject.toml
.github/workflows/: release.yml
engramme_assist/: __init__.py  __main__.py  install.py
engramme_assist/_data/: AGENTS.generic.md  UPSTREAM  profile.example.yml
engramme_assist/_data/scripts/: codebase_index.py  gardener.py  initiative_index.py  insights.py  page_lookup.py  portfolio.py
engramme_assist/_data/skills/claude-history-ingest/: SKILL.md
engramme_assist/_data/skills/cross-linker/: SKILL.md
engramme_assist/_data/skills/daily-update/: SKILL.md
engramme_assist/_data/skills/jot/: SKILL.md
engramme_assist/_data/skills/meeting-debrief/: SKILL.md
engramme_assist/_data/skills/meeting-notes/: SKILL.md
engramme_assist/_data/skills/meeting-prep/: SKILL.md
engramme_assist/_data/skills/morning-brief/: SKILL.md
engramme_assist/_data/skills/sparring/: SKILL.md
engramme_assist/_data/skills/weekly-retro/: SKILL.md
engramme_assist/_data/skills/wiki-dedup/: SKILL.md
engramme_assist/_data/skills/wiki-history-ingest/: SKILL.md
engramme_assist/_data/skills/wiki-ingest/: SKILL.md
engramme_assist/_data/skills/wiki-init/: SKILL.md
engramme_assist/_data/skills/wiki-lint/: SKILL.md
engramme_assist/_data/skills/wiki-profile/: SKILL.md  profile.example.yml
engramme_assist/_data/skills/wiki-query/: SKILL.md
tests/: conftest.py  test_codebase_index.py  test_initiative_index.py  test_install.py  test_portfolio.py  test_skills_content.py
(+19 files in other folders)
